# adele-tui

./: AGENTS.md  Cargo.toml  README.md  justfile
crates/client-common/: Cargo.toml
crates/client-common/src/: config.rs  dbus_client.rs  lib.rs  signal.rs  transport.rs  types.rs  ws_client.rs
src/: app.rs  builtins.rs  client_tools.rs  config_cmd.rs  connections.rs  credentials.rs  in_flight.rs  kb.rs  keys.rs  lib.rs  main.rs  markdown.rs  mcp.rs  model_selector.rs  oauth.rs  personality_selector.rs  picker.rs  profile.rs  purposes.rs  screen.rs  settings.rs  tasks.rs  theme.rs  toolbar.rs  ui.rs  voice.rs  voice_client.rs
src/views/: connections.rs  mod.rs  purposes.rs  selector.rs
tests/: in_flight_rpc.rs
