[package]
name = "adele"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[[bin]]
name = "adele"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
ratatui = { version = "0.30", features = ["unstable-rendered-line-info"] }
crossterm = { version = "0.29", features = ["event-stream"] }
futures = "0.3"
keyring-core = "1"
zbus-secret-service-keyring-store = { version = "1", features = ["rt-tokio-crypto-rust"] }
oauth2 = "5"
open = "5"
pulldown-cmark = { version = "0.13", default-features = false }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
ratatui-textarea = "0.9"
unicode-width = "0.2"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
url = "2"
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Direct zbus client for the standalone voice daemon (`org.desktopAssistant.Voice`),
# a separate D-Bus service from the orchestrator transport. Used by
# `voice_client::VoiceController` to route narration through the daemon's warm
# `SayText`, mirroring adele-gtk#80's `voice_client.rs`. Matches gtk's pin.
zbus = { version = "5", default-features = false, features = ["tokio"] }
# Shared protocol + transport crates live in the desktop-assistant repo.
# Cargo resolves the package by name from that workspace; Cargo.lock pins
# the exact revision for reproducibility.
desktop-assistant-client-common = { git = "https://github.com/adelie-ai/desktop-assistant.git", branch = "main", features = ["mcp-host"] }
desktop-assistant-api-model = { git = "https://github.com/adelie-ai/desktop-assistant.git", branch = "main" }

# The shared view-agnostic model+controller (CC-3, desktop-assistant#358).
client-ui-common = { path = "../client-ui-common" }

# Embeddable voice module (adelie-ai/voice phase 1) for in-app dictation +
# reply playback with no voice daemon — see adele-tui#67 / voice#34. Path-dep
# of the sibling `voice` checkout, mirroring how we path-dep desktop-assistant
# from adele-gtk; revisit git-dep/publish once the module's API is stable. The
# two adapter crates are named so we can spell the concrete pipeline type
# `Dictation<SileroVad, WhisperStt>`; cargo resolves the rest of the module's
# transitive deps from the voice workspace automatically.
[dependencies.adele-voice-module]
path = "../voice/crates/module"

# Shared client-side voice-output plumbing (desktop-assistant#274): the
# `AdeleOutput` level + narration gate, the byte-identical system-refinement
# constants, and `into_speakable_sentences` (the sentence chunker, so a long
# reply is spoken one short sentence at a time — each synth is one-shot with a
# ~20s timeout). Owned once here instead of triplicated across the clients;
# pulls in `adele-voice-core` transitively for its `SentenceBuffer`. Same
# `../voice` symlink path-dep as the module above.
[dependencies.adele-voice-client-common]
path = "../voice/crates/client-voice"

[dependencies.adele-voice-vad-silero]
path = "../voice/crates/vad-silero"

[dependencies.adele-voice-stt-whisper]
path = "../voice/crates/stt-whisper"

# Option D dep-sourcing: client-ui-common path-deps the desktop-assistant crates
# while adele keeps its git pin above. Redirect those transitive deps onto the SAME
# path so cargo resolves exactly ONE client-common / api-model (a git source and a
# path source otherwise split SignalEvent into two incompatible types -> E0308).
[patch."https://github.com/adelie-ai/desktop-assistant.git"]
desktop-assistant-client-common = { path = "../desktop-assistant/crates/client-common" }
desktop-assistant-api-model = { path = "../desktop-assistant/crates/api-model" }


[lints.rust]
warnings = "deny"

[lints.clippy]
all = "deny"
