[package]
name = "adele"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[[bin]]
name = "adele"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
ratatui = { version = "0.30", features = ["unstable-rendered-line-info"] }
crossterm = { version = "0.29", features = ["event-stream"] }
futures = "0.3"
keyring-core = "1"
zbus-secret-service-keyring-store = { version = "1", features = ["rt-tokio-crypto-rust"] }
oauth2 = "5"
open = "5"
pulldown-cmark = { version = "0.13", default-features = false }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
ratatui-textarea = "0.9"
unicode-width = "0.2"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
url = "2"
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Direct zbus client for the standalone voice daemon (`org.desktopAssistant.Voice`),
# a separate D-Bus service from the orchestrator transport. Used by
# `voice_client::VoiceController` to route narration through the daemon's warm
# `SayText`, mirroring adele-gtk#80's `voice_client.rs`. Matches gtk's pin.
zbus = { version = "5", default-features = false, features = ["tokio"] }
# Shared protocol + transport crates live in the desktop-assistant repo.
# Cargo resolves the package by name from that workspace; Cargo.lock pins
# the exact revision for reproducibility.
desktop-assistant-client-common = { git = "https://github.com/adelie-ai/desktop-assistant.git", branch = "main", features = ["mcp-host"] }
desktop-assistant-api-model = { git = "https://github.com/adelie-ai/desktop-assistant.git", branch = "main" }

# The shared view-agnostic model+controller (CC-3, desktop-assistant#358).
client-ui-common = { path = "../client-ui-common" }

# Compiled-in ("built-in") MCP servers hosted in-process (da#538 Phase C). Each
# core server lib exposes `build_service()`; the tui hosts them via
# `McpHost::start_with` so a fresh client has core tools with no client-mcp.toml.
# Optional + feature-gated (see `[features]`) so a `--no-default-features` build
# links none of them and behaves exactly as before. Sibling path-deps, matching
# how the desktop-assistant crates are path-patched below.
fileio-mcp = { path = "../fileio-mcp", optional = true }
terminal-mcp = { path = "../terminal-mcp", optional = true }
tasks-mcp = { path = "../tasks-mcp", optional = true }
web-mcp = { path = "../web-mcp", optional = true }

# The "broad set" of built-in MCP servers (the "mac broad set", da#538). These
# are default-OFF opt-in extras: the default tui links only the core four above,
# and these five link in only when their `mcp-*` feature (or the `builtin-extras`
# umbrella) is enabled. All five expose an infallible `build_service()`. A future
# mac client copies the `builtin-extras` feature block and turns it on by default.
# Same sibling path-dep + `mcp-core` URL-patch treatment as the core four.
weather-forecast-mcp = { path = "../weather-forecast-mcp", optional = true }
internet-radio-mcp = { path = "../internet-radio-mcp", optional = true }
openstreetmap-mcp = { path = "../openstreetmap-mcp", optional = true }
geocode-mcp = { path = "../geocode-mcp", optional = true }
skills-mcp = { path = "../skills-mcp", optional = true }

# Embeddable voice module (adelie-ai/voice phase 1) for in-app dictation +
# reply playback with no voice daemon — see adele-tui#67 / voice#34. Path-dep
# of the sibling `voice` checkout, mirroring how we path-dep desktop-assistant
# from adele-gtk; revisit git-dep/publish once the module's API is stable. The
# two adapter crates are named so we can spell the concrete pipeline type
# `Dictation<SileroVad, WhisperStt>`; cargo resolves the rest of the module's
# transitive deps from the voice workspace automatically.
[dependencies.adele-voice-module]
path = "../voice/crates/module"

# Shared client-side voice-output plumbing (desktop-assistant#274): the
# `AdeleOutput` level + narration gate, the byte-identical system-refinement
# constants, and `into_speakable_sentences` (the sentence chunker, so a long
# reply is spoken one short sentence at a time — each synth is one-shot with a
# ~20s timeout). Owned once here instead of triplicated across the clients;
# pulls in `adele-voice-core` transitively for its `SentenceBuffer`. Same
# `../voice` symlink path-dep as the module above.
[dependencies.adele-voice-client-common]
path = "../voice/crates/client-voice"

[dependencies.adele-voice-vad-silero]
path = "../voice/crates/vad-silero"

[dependencies.adele-voice-stt-whisper]
path = "../voice/crates/stt-whisper"

# Option D dep-sourcing: client-ui-common path-deps the desktop-assistant crates
# while adele keeps its git pin above. Redirect those transitive deps onto the SAME
# path so cargo resolves exactly ONE client-common / api-model (a git source and a
# path source otherwise split SignalEvent into two incompatible types -> E0308).
[patch."https://github.com/adelie-ai/desktop-assistant.git"]
desktop-assistant-client-common = { path = "../desktop-assistant/crates/client-common" }
desktop-assistant-api-model = { path = "../desktop-assistant/crates/api-model" }

# Collapse mcp-core to a SINGLE source. client-common pins it to a git rev while
# the built-in server libs (fileio/terminal/tasks/web) float the git dep; two
# git sources would split `mcp_core::McpService` into incompatible types (E0308)
# when a built-in's `Arc<dyn McpService>` is handed to `BuiltinServer::new`.
# Patching the URL to the local checkout resolves every consumer to one
# mcp-core. `../mcp-core` is a superset of the pinned rev (only security/CLI
# hardening + docs ahead; the `McpService` trait is byte-identical), so the API
# client-common compiles against is unchanged.
[patch."https://github.com/adelie-ai/mcp-core"]
mcp-core = { path = "../mcp-core" }


[dev-dependencies]
# Tempfile config paths for the `config_cmd` unit tests, so they mutate/save
# `ClientMcpConfig` against a throwaway file instead of the user's real config.
tempfile = "3"

[features]
# The core built-in MCP set is compiled in and hosted in-process by default, so
# a fresh tui is useful with no client-mcp.toml (da#538 Phase C). Turn a server
# off with e.g. `--no-default-features --features mcp-fileio,mcp-terminal`, or
# drop them all with `--no-default-features` (the tui then behaves exactly as it
# did before this feature — client-mcp.toml servers only).
default = ["builtin-core"]
builtin-core = ["mcp-fileio", "mcp-terminal", "mcp-tasks", "mcp-web"]
mcp-fileio = ["dep:fileio-mcp"]
mcp-terminal = ["dep:terminal-mcp"]
mcp-tasks = ["dep:tasks-mcp"]
mcp-web = ["dep:web-mcp"]

# The "broad set" opt-in extras (da#538), OFF by default. Enable an individual
# server with e.g. `--features mcp-weather`, or all five with the `builtin-extras`
# umbrella. Deliberately NOT part of `default`/`builtin-core`, so the stock tui
# build is byte-for-byte the same as before and links none of these crates. A
# future mac client is expected to add `builtin-extras` to its own default.
builtin-extras = [
    "mcp-weather",
    "mcp-internet-radio",
    "mcp-openstreetmap",
    "mcp-geocode",
    "mcp-skills",
]
mcp-weather = ["dep:weather-forecast-mcp"]
mcp-internet-radio = ["dep:internet-radio-mcp"]
mcp-openstreetmap = ["dep:openstreetmap-mcp"]
mcp-geocode = ["dep:geocode-mcp"]
mcp-skills = ["dep:skills-mcp"]

[lints.rust]
warnings = "deny"

[lints.clippy]
all = "deny"

# Release profiles. Default favors small, fast binaries (strip + thin LTO).
# Build variants: `cargo build --profile release-fast` / `--profile release-small`.
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "unwind"

[profile.release-fast]
inherits = "release"
lto = "fat"

[profile.release-small]
inherits = "release"
opt-level = "z"
lto = "fat"
panic = "abort"
strip = true
